Changelog

10/08/08 (Arnout)
- compile with g++ 4.3, thanks to Leslie P. Polzer - skypher

08/06/08 (Arnout, thanks to MeneerJansen for sparking some activity again :) )
- add 'if (DEBUG)' to debug message
- fix compiler warning by marking some constant 
  strings 'const'
- set view mode to 'kbps' by default,
  instead of the 'grand total' number of bytes
- some fixes thanks to Bart Martens

27/08/05 (Arnout)
- giving all unknown connections their own
  `unknown' process
- UDP support
- investigated memleak, turns out to be a problem in libc:
  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=273051 
  https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=103142

18/09/04 (Arnout)
- also compile with gcc-3.4

-------------------------------------------------

17/09/04 (Arnout)
-Wrapped pcap stuff in nicer 'decpcap' module
-Support for IPv6 and PPP
-using standard C++ maps instead of custom structures
-many more code cleanups
-documentation
-split up ui code in seperate module

-------------------------------------------------

15/08/04 (Fabian)
-Totals (in curses mode)

-------------------------------------------------

29/07/04 (Fabian)
-tracemode (-t)

-------------------------------------------------

06/07/04 (Arnout)
-added support for monitoring multiple interfaces 
 at once

-------------------------------------------------

02/07/04 (Arnout)
-enabled 'q' for quitting

-------------------------------------------------

29/06/04 (Fabian)  <-> 0.5.1
-Adding forceExit when device is ifdown
(handle was null => segfault)
-Changelog activated

-------------------------------------------------

10/05/04 (Arnout)
-cleanups
-splitting out incoming and outgoing traffic 
(based on 'I/O by balance' by Fabian)

-------------------------------------------------

06/04/04 (Fabian)
-getLocal
-I/O by balance	
-forceExit

-------------------------------------------------

14/02/04 (Fabian) 
-Refresh delay
-Help
-Handling command-line options
